--- a/libs/common/src/lib/widgets/widget-generator.component.scss
+++ b/libs/common/src/lib/widgets/widget-generator.component.scss
@@ -92,6 +92,9 @@
             flex: 1 0 auto;
             max-width: calc(100% - #{rhythm(5)});
           }
+          .icon-for-field-with-help {
+            margin-top: calc(-1 * #{rhythm(3)});
+          }
         }
       }
 
