[sc-8660] Add notifications button and panel
  - Add notification button in the top bar
  - Add notification panel in base component
  - Display notification panel with a slide transition from the right
  - In the panel:
     - display the list of notifications or a message when there is no notification.
     - highlight unread notifications
     - delete all button in the footer
  - for processing notifications, resource title is a link to resource preview page and clicking on it automatically close the notification panel
  - mark all the notifications as read when closing the panel
  - group notifications arriving within less than 30s and display up to 10 items in one notification.

--- a/libs/common/src/lib/base/base.component.html
+++ b/libs/common/src/lib/base/base.component.html
@@ -1,5 +1,11 @@
-<app-topbar></app-topbar>
+<app-topbar
+  [isNotificationPanelOpen]="isNotificationPanelOpen"
+  (toggleNotificationPanel)="isNotificationPanelOpen = !isNotificationPanelOpen"></app-topbar>
 
 <div class="base-container">
   <router-outlet></router-outlet>
 </div>
+
+<stf-notifications-panel
+  [isOpen]="isNotificationPanelOpen"
+  (close)="isNotificationPanelOpen = false"></stf-notifications-panel>
