--- a/libs/common/src/lib/topbar/topbar.component.html
+++ b/libs/common/src/lib/topbar/topbar.component.html
@@ -54,6 +54,11 @@
     <app-kb-switch></app-kb-switch>
 
     @if (!standalone) {
+      <stf-notification-button
+        [count]="notificationsCount | async"
+        [active]="isNotificationPanelOpen"
+        (click)="toggleNotificationPanel.emit()"></stf-notification-button>
+
       <app-user-menu
         data-cy="user-menu"
         [userInfo]="userInfo | async" />
