[sc-8685] Improve translations

--- a/libs/common/src/lib/upload/create-link/create-link.component.html
+++ b/libs/common/src/lib/upload/create-link/create-link.component.html
@@ -64,7 +64,7 @@
             [placeholder]="'modal.create_link.multiple-links.placeholder' | translate"
             [rows]="5"
             [errorMessages]="validationMessages['link']">
-            {{ 'modal.create_link.textarea' | translate }}
+            {{ 'modal.create_link.multiple-links.label' | translate }}
           </pa-textarea>
         }
 
