--- a/libs/common/src/lib/notifications/notification/notification.component.html
+++ b/libs/common/src/lib/notifications/notification/notification.component.html
@@ -8,7 +8,7 @@
         <span
           class="body-m"
           [class.unread]="message.unread">
-          {{ message.type | notificationType: message.failure | translate }}
+          {{ message | notificationType: message.failure | translate }}
         </span>
       </div>
 
