[sc-8306] Add AI tokens used metric in the usage board

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/kb-usage/usage-charts.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/kb-usage/usage-charts.component.html
@@ -5,7 +5,7 @@
         <app-line-chart
           [yUnit]="chart.yUnit || '' | translate"
           [data]="chart.data"
-          [xAxisTickOptions]="smallContainer ? { modulo: 4 } : null"
+          [xAxisTickOptions]="xAxisTickOptions"
           [height]="chartHeight"></app-line-chart>
       } @else {
         <div [style]="'height:' + chartHeight + 'px'"></div>
@@ -16,7 +16,18 @@
         <app-line-chart
           [yUnit]="chart.yUnit || '' | translate"
           [data]="chart.data"
-          [xAxisTickOptions]="smallContainer ? { modulo: 4 } : null"
+          [xAxisTickOptions]="xAxisTickOptions"
+          [height]="chartHeight"></app-line-chart>
+      } @else {
+        <div [style]="'height:' + chartHeight + 'px'"></div>
+      }
+    }
+    @case ('tokens') {
+      @if (tokenChart; as chart) {
+        <app-line-chart
+          [yUnit]="chart.yUnit || '' | translate"
+          [data]="chart.data"
+          [xAxisTickOptions]="xAxisTickOptions"
           [height]="chartHeight"></app-line-chart>
       } @else {
         <div [style]="'height:' + chartHeight + 'px'"></div>
