Apply suggestions from code review
Co-authored-by: Mat Pellerin <mpellerin42@gmail.com>

--- a/libs/sync/src/lib/upload/tabs/edit-folders.component.html
+++ b/libs/sync/src/lib/upload/tabs/edit-folders.component.html
@@ -14,8 +14,7 @@
       }
     </table>
   </div>
-}
-@if (!(canSelectFiles | async)) {
+} @else {
   <div class="parameters">
     @for (param of (currentSource | async)?.data || {} | keyvalue; track param.value) {
       <pa-checkbox
