--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -47,7 +47,7 @@
         }
         <nsy-connectors
           type="sources"
-          [disabled]="!hasSyncServer || (isServerDown | async)"
+          [disabled]="!hasSyncServer || (isServerDown | async) === true"
           (selectConnector)="onSelectConnector($event)"></nsy-connectors>
       } @else {
         <p class="body-m description">
