--- a/libs/common/src/lib/upload/upload-data/upload-layout.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-layout.component.html
@@ -1,7 +1,7 @@
 <div class="page-spacing">
   <router-outlet></router-outlet>
 </div>
-@if (hasSyncServer) {
+@if (!standalone && hasSyncServer) {
   <div class="sync-status">
     {{ ((isServerDown | async) ? 'upload.server.server_down' : 'upload.server.server_up') | translate }}
   </div>
