[sc-8790] Display open viewer button on resource viewer when one field

--- a/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
@@ -132,7 +132,7 @@
     }
   </div>
   <div class="viewer-button-container">
-    @if (loaded) {
+    @if (currentFieldId) {
       <pa-button
         [disabled]="loadingPreview"
         (click)="openViewer()">
