Don't use links for deletion notifications
Resource are deleted, so the link will not work

--- a/libs/core/src/lib/notifications/notification/notification.component.html
+++ b/libs/core/src/lib/notifications/notification/notification.component.html
@@ -18,7 +18,7 @@
       <ul>
         @for (item of message.data.slice(0, maxItemsPerNotification); track item) {
           <li>
-            @if (item.resourceUrl) {
+            @if (item.resourceUrl && message.operation !== 'deleted') {
               <a
                 class="notification-link"
                 [routerLink]="item.resourceUrl"
