[sc-8799] Format summary displayed in resource preview

--- a/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
@@ -44,7 +44,14 @@
           <p>{{ resource.title }}</p>
 
           <div class="title-xxs">{{ 'resource.summary' | translate }}</div>
-          <p>{{ resource.summary || '–' }}</p>
+          <p>
+            @for (text of summary | async; track $index) {
+              {{ text }}
+              <br />
+            } @empty {
+              -
+            }
+          </p>
 
           <div class="title-xxs">{{ 'resource.thumbnail.label' | translate }}</div>
           <div class="thumbnails-container">
