--- a/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
@@ -44,14 +44,7 @@
           <p>{{ resource.title }}</p>
 
           <div class="title-xxs">{{ 'resource.summary' | translate }}</div>
-          <p>
-            @for (text of summary | async; track $index) {
-              {{ text }}
-              <br />
-            } @empty {
-              -
-            }
-          </p>
+          <p [innerHtml]="(summary | async) || '-'"></p>
 
           <div class="title-xxs">{{ 'resource.thumbnail.label' | translate }}</div>
           <div class="thumbnails-container">
