[sc-8799] Format summary displayed in resource preview (#1314)
* [sc-8799] Format summary displayed in resource preview

* Improvement

--- a/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
@@ -44,7 +44,7 @@
           <p>{{ resource.title }}</p>
 
           <div class="title-xxs">{{ 'resource.summary' | translate }}</div>
-          <p>{{ resource.summary || '–' }}</p>
+          <p [innerHtml]="(summary | async) || '-'"></p>
 
           <div class="title-xxs">{{ 'resource.thumbnail.label' | translate }}</div>
           <div class="thumbnails-container">
